# rag-bot

./: .gitignore  README.md  pyproject.toml
client/: README.md  app.py
client/components/: chat.py  inspector.py  sidebar.py
client/state/: session.py
client/utils/: api.py  helpers.py
server/: README.md  main.py  requirements.txt
server/api/: routes.py  schemas.py
server/config/: settings.py
server/core/: document_processor.py  llm_chain_factory.py  vector_database.py
server/utils/: logger.py
